--- a/main.html
+++ b/main.html
@@ -8,19 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav>
-	<ul>
-			<a href="#home">Home</a>
-			<a href="#about_us">About us</a>
-			<a href="#contact_us">Contact us</a>
-		</ul>
-	</nav>
-	<section>
+	  <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about-us">About us</a></li>
+            <li><a href="#contact-us">Contact us</a></li>
+        </ul>
+    </nav>
 		<h1>3 random videos</h1>
-		<video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video>
-		<video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4"></video>
-		<video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4"></video>
-	</section>
+		<video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+            </video>
+            
+            <!-- Video 2 -->
+            <video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+            </video>
+            
+            <!-- Video 3 -->
+            <video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+            </video>
     <script type="text/javascript" src="./script.js">
 </script>
 
